Update the manual.

--- a/doc/manual/spt-it-out.tex
+++ b/doc/manual/spt-it-out.tex
@@ -14,7 +14,7 @@
 
 \section{\label{sect:intro} Introduction}
 \begin{center}
-{\tt spt-it-out [<infile>]}
+{\tt spt-it-out [-v <verbosity level>] [<infile>]}
 \end{center}
 
 \sio\ is an interpreter for a small lisp-like language that can be
