Add lisensing info.

--- a/README
+++ b/README
@@ -1,4 +1,12 @@
                       *S*imple *P*lotting *T*ool
+                      --------------------------
+
+Contact information is available at:
+------------------------------------
+
+Ethan Burns <http://www.cs.unh.edu/~eaburns>
+Jordan Thayer <http://www.cs.unh.edu/~jtd7>
+
 
 
 To build spt-it-out:
