Add a flag to spt-it-out to disable legend sorting.

--- a/doc/manual/spt-it-out.tex
+++ b/doc/manual/spt-it-out.tex
@@ -250,6 +250,8 @@ Option & Default & Notes \\
 :x-max & & The maximum x-axis value\\
 :y-min & & The minimum y-axis value\\
 :y-max & & The maximum y-axis value\\
+:sort-legend & true & Whether or not to sort the legend on the mean y
+value \\
 :legend & :upper-right & The location of the legend \\
 :dataset & & A dataset to add to the plot.  (See below for available
 datasets).\\
