--- a/README
+++ b/README
@@ -10,9 +10,18 @@ Jordan Thayer <http://www.cs.unh.edu/~jtd7>
 
 Dependencies
 ------------
-* lacaml (which depends on lapack)
+* lacaml (which depends on lapack, which depends on gfortran)
 * cairo-ocaml (which depends on Cairo: http://cairographics.org/)
 * lablgtk
+
+Getting the dependencies for compilation on Ubuntu (not well tested):
+    apt-get install libcairo-ocaml-dev
+    apt-get install libgfortran3
+    apt-get install liblapack-dev # (This may get libgfortran3 as a dep.)
+
+    Download and install lacaml from source as per the instructions.
+    On a 64-bit system, you will need to copy the libraries to your
+    /usr/lib65/ocaml directory.
 
 
 To build spt-it-out:
