--- a/README
+++ b/README
@@ -10,7 +10,7 @@ Jordan Thayer <http://www.cs.unh.edu/~jtd7>
 
 Dependencies
 ------------
-* lacaml (which depends on lapack, which depends on gfortran)
+* lacaml (which depends on lapack, which depends on libgfortran)
 * cairo-ocaml (which depends on Cairo: http://cairographics.org/)
 * lablgtk
 
