Update the README.

--- a/README
+++ b/README
@@ -23,8 +23,8 @@ Getting the dependencies for compilation on Ubuntu (not well tested):
     Download and install lacaml
     (http://ocaml.info/home/ocaml_sources.html) from source as per the
     instructions (make ; make install).  On a 64-bit system, you will
-    need to copy or link the libraries to your /usr/lib65/ocaml
-    directory.
+    need to copy or link the lacaml directory that is installed to
+    your /usr/lib65/ocaml directory.
 
 
 To build spt-it-out:
