Update the TODO.

--- a/TODO
+++ b/TODO
@@ -84,6 +84,8 @@ spt-it-out
 
 * More simple numeric operations (plus, times, etc.)
 
+* Document sunburst tree plots in the manual
+
 ------------------------------------------------------------
 Plot types
 ------------------------------------------------------------
