--- a/TODO
+++ b/TODO
@@ -14,6 +14,10 @@
 Datasets
 ------------------------------------------------------------
 
+* Titles in tree plots
+
+* legend in sunburst plots
+
 * Label bestfit lines with the polynomial.
 
 * Datasets should somehow 'know' the size of the plot that they are
